--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,13 +13,14 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme='dark'>
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Portafolio-Bastian-Araya</a>
+
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
 
+            <%= link_to "Mi Portafolio", "/index", class:"nav-link link-navbar" %>
             <%= link_to "Home", "/home", class:"nav-link" %>
             <%= link_to "Projects", "/projects", class:"nav-link" %>
             <%= link_to "Contact", "/contact", class:"nav-link" %>
