--- a/app/views/portafolio/projects.html.erb
+++ b/app/views/portafolio/projects.html.erb
@@ -1,1 +1,34 @@
 <h1>Projectos realizados durante nuestro avance en el bootcamp:</h1>
+
+<div class='row'>
+  <div class='col-4'>
+    <div class="card" style="width: 18rem;">
+      <%= image_tag 'ejemplo1.png' %>
+      <div class="card-body">
+        <p class="card-text">Viajes Chile fue la prueba evaluada para el modulo de HTML, CSS y BOOTSTRAP en el cual se pidio emplear todo lo aprendido </p>
+        <button class="btn btn-primary link-navbar" type="submit">Ver Mas</button>
+      </div>
+    </div>
+  </div>
+
+  <div class='col-4'>
+    <div class="card" style="width: 18rem;">
+      <%= image_tag 'ejemplo2.png' %>
+      <div class="card-body">
+        <p class="card-text">Rica Comida fue un projecto front end muy interactivo en el cual se aplicaron los conceptos claves de bootstrap y js </p>
+        <button class="btn btn-primary link-navbar" type="submit">Ver Mas</button>
+      </div>
+    </div>
+  </div>
+
+  <div class='col-4'>
+    <div class="card" style="width: 18rem;">
+      <%= image_tag 'ejemplo3.png' %>
+      <div class="card-body">
+        <p class="card-text">La programacion en ruby es el corazon del bootcamp, uno de nuestros desafios consistia en importar api, convertir informacion a hashes y extraer lo relevante dado el interes del usuario. </p>
+        <button class="btn btn-primary link-navbar" type="submit">Ver Mas</button>
+      </div>
+    </div>
+  </div>
+</div>
+
